--- a/src/kontakt.html
+++ b/src/kontakt.html
@@ -66,15 +66,15 @@
       <h3 class="text-center">Imate pitanje? Mi mozda imamo odgovor :)</h3>
       <ul class="kontakt">
         <li>
-          <img src="images/iconmonstr-twitter-4.svg" alt="" />
+          <i class="fa-brands fa-twitter"></i>Twitter
           <a href="https://twitter.com/cryptopartyrs" target="_blank">Twitter</a>
         </li>
         <li>
-          <img src="images/iconmonstr-google-play-4.svg" alt="" />
+          <i class="fa-brands fa-square-google-plus"></i>
           <a href="https://groups.google.com/forum/?hl=en#!forum/cryptoartyrs" target="_blank">Google+</a>
         </li>
         <li>
-          <img src="images/iconmonstr-email-10.svg" alt="" />
+          <i class="fa-solid fa-envelope"></i>
           <a href="mailto:kontakt@cryptoparty.rs">Email</a>
         </li>
       </ul>
